# vulkan-project

./: .gitignore  Cargo.toml  Makefile  README.md  build.rs
shaders/: first.vert
shaders/src/: 2d.vert  3dColored.frag  3dColored.vert  cartesian_2d.vert  circle.frag  circle.vert  first.frag  first.vert  point.vert  solid_color.frag  solid_white.frag  textured.frag  textured.vert  uniform_test.frag
src/: app.rs  drawables.rs  font.rs  graphics.rs  input.rs  main.rs
src/drawables/: bezier.rs  circle.rs  cube.rs  grid.rs  point.rs  square.rs  text_test.rs  textest.rs  triangle.rs  ubotest.rs
src/font/: glyphs.rs  mapping.rs  outline.rs  tables.rs
src/graphics/: bindable.rs  drawable.rs  pipeline.rs  shaders.rs  utils.rs
src/graphics/bindable/: buffer.rs  god_bindable.rs  mutable_buffer.rs  push_constant.rs  shader.rs  texture.rs  uniform.rs
src/input/: keyboard.rs  mouse.rs
